# beacon

./: .gitignore  CODE-OF-CONDUCT.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
Android/: .project  settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/cafe/sofie/beacon/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/cafe/sofie/beacon/: Core.kt  MainActivity.kt
Android/app/src/main/java/cafe/sofie/beacon/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/test/java/cafe/sofie/beacon/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/shared/: build.gradle
Android/shared/src/androidTest/java/cafe/sofie/beacon/shared/: ExampleInstrumentedTest.kt
Android/shared/src/test/java/cafe/sofie/beacon/shared/: ExampleUnitTest.kt
shared/: Cargo.toml  uniffi.toml
shared/src/: app.rs  lib.rs
shared/src/cafe/sofie/beacon/shared/: shared.kt
shared_types/: Cargo.toml  build.rs
