[package]
name = "shared"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
async-sse = "5.1.0"
async-std = "1.13.1"
chrono = { version = "0.4.40", features = ["serde"] }
crux_core.workspace = true
crux_http.workspace = true
futures = "0.3.31"
lazy_static = "1.5.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.140"
uniffi = "0.29.1"
url = "2.5.4"
wasm-bindgen = "0.2.100"

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.29.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"] }
